fixed linking, binding module name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/include/
   FILES_MATCHING PATTERN "*.h*")
 
 
+export(EXPORT cytnx_targets FILE ${CMAKE_CURRENT_BINARY_DIR}/CytnxTargets.cmake NAMESPACE cytnx_core::)
+export(PACKAGE cytnx_core)
 
 # #####################################################################
 # Pybind
@@ -79,20 +81,13 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/include/
 set(PYBIND11_FINDPYTHON ON)
 find_package(pybind11 CONFIG REQUIRED)
 
-pybind11_add_module(pycytnx_core SHARED src/cpp/pybind/main.cpp)
-target_link_libraries(pycytnx_core PUBLIC cytnx_core)
-#install(TARGETS pycytnx DESTINATION ${SKBUILD_PROJECT_NAME})
+pybind11_add_module(_core MODULE src/cpp/pybind/main.cpp)
+target_link_libraries(_core PUBLIC cytnx_core)
+
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/cytnx_core
     DESTINATION ${CMAKE_INSTALL_PREFIX}
 )
-install(TARGETS pycytnx_core
-  LIBRARY
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/cytnx_core
-  COMPONENT libraries
-)
+install(TARGETS _core LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/cytnx_core)
+#install(TARGETS pycytnx DESTINATION ${SKBUILD_PROJECT_NAME})
 message(STATUS " skbuild Installation Prefix: ${SKBUILD_PROJECT_NAME}")
 message(STATUS " skbuild Installation Prefix: ${SKBUILD_HEADERS_DIR}")
-
-
-export(EXPORT cytnx_targets FILE ${CMAKE_CURRENT_BINARY_DIR}/CytnxTargets.cmake NAMESPACE cytnx_core::)
-export(PACKAGE cytnx_core)
