--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ minimum-version = "build-system.requires"
 build-dir = "build/{wheel_tag}"
 build.tool-args = ["-j4"]
 
+# only use pypi registry
+[[tool.uv.index]]
+name = "pypi"
+url = "https://pypi.org/simple"
+
 [tool.black]
 line-length = 88
 
