--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ authors = [
     { name = "kaihsin", email = "kaihsinwu@gmail.com" }
 ]
 requires-python = ">=3.10"
-dependencies = [
-    "torch>=2.5.1",
-]
+dependencies = []
 
 [tool.scikit-build]
 minimum-version = "build-system.requires"
