--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Clang
 on:
   pull_request:
   push:
@@ -17,6 +17,5 @@ jobs:
     - name: Run clang-format style check for C/C++/Protobuf programs.
       uses: jidicula/clang-format-action@v4.13.0
       with:
-        clang-format-version: '14'
+        clang-format-version: '19'
         check-path: 'src'
-        fallback-style: 'Google' # optional
