--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "kaihsin", email = "kaihsinwu@gmail.com" }
 ]
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "numpy>=2.2.0",
+]
 
 [tool.scikit-build]
 minimum-version = "build-system.requires"
