--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.10"
 dependencies = [
     "numpy>=2.2.0",
+    "scipy-openblas32>=0.3.28.0.2",
 ]
 
 [tool.scikit-build]
