--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,8 @@ jobs:
       matrix:
         python-version:
           - "3.10"
-          - "3.11"
-          - "3.12"
+          #- "3.11"
+          #- "3.12"
 
     steps:
       - uses: actions/checkout@v4
@@ -43,5 +43,6 @@ jobs:
 
       - name: Audit manylinux
         run: |
-          uv run auditwheel repair dist/*whl --exclude libscipy_openblas64_.so
-          uv run twine upload wheelhouse/*manylinux* -p ${{ secrets.PYPI_TOKEN }}
+          uv run auditwheel-symbols --manylinux 2_5 dist/*whl
+          #uv run auditwheel repair dist/*whl --exclude libscipy_openblas64_.so
+          #uv run twine upload wheelhouse/*manylinux* -p ${{ secrets.PYPI_TOKEN }}
