--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Build
         run: uv build
 
+      # TODO replace this with a manylinux docker and run in CI with -it -v $(pwd):/io
       - name: Audit manylinux
         run: |
           ldd --version
-          #uv run auditwheel-symbols --manylinux 2_39 dist/*whl
           uv run auditwheel repair dist/*whl --plat "manylinux_2_39_x86_64" --exclude libscipy_openblas64_.so
-          #uv run twine upload wheelhouse/*manylinux* -p ${{ secrets.PYPI_TOKEN }}
+          uv run twine upload wheelhouse/*manylinux* -p ${{ secrets.PYPI_TOKEN }}
