--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,9 @@
-name: Publish
+name: Publish to PyPI
 on:
-  pull_request:
   push:
-    branches:
-      - main
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+    tags:
+      - "v*"
+
 
 
 jobs:
@@ -19,8 +16,8 @@ jobs:
       matrix:
         python-version:
           - "3.10"
-          #- "3.11"
-          #- "3.12"
+          - "3.11"
+          - "3.12"
 
     steps:
       - uses: actions/checkout@v4
